# wlconnect

./: Cargo.toml  rust-toolchain.toml  rustfmt.toml
crates/kdeconnect-rs/: Cargo.toml
crates/kdeconnect-rs/src/: config.rs  device.rs  error.rs  lib.rs  util.rs
crates/kdeconnect-rs/src/packets/: battery.rs  clipboard.rs  connectivity_report.rs  findmyphone.rs  identity.rs  mod.rs  mousepad.rs  mpris.rs  pair.rs  ping.rs  presenter.rs  runcommand.rs  share.rs  systemvolume.rs  telephony.rs
crates/wlconnect/: Cargo.toml
crates/wlconnect/src/: main.rs
