[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["m00n"]
license = "MPL-2.0"
description = "Standalone implementation of KDE Connect daemon for Wayland compositors."

[workspace.dependencies]
kdeconnect = { path = "crates/kdeconnect-rs" }

anyhow = "1"
thiserror = "1"
log = "0.4"

serde = "1"
serde_json = "1"

async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "net", "sync", "fs", "io-util", "time"]}
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-stream = "0.1"

time = "0.3"
