[package]
name = "wlconnect"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
log.workspace = true

tokio.workspace = true

# serde.workspace = true
serde_json.workspace = true
