[package]
name = "wlconnect"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
publish = false

[dependencies]
kdeconnect.workspace = true
async-trait.workspace = true

env_logger = "0.11"
anyhow.workspace = true
log.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

# serde.workspace = true
serde_json.workspace = true
